fixed add list spacing + fixed date to show proper list add time + added hovers for each button on page + fixed spacing for lists + add a list + explore buttons

--- a/public/stylesheets/user-jinglelists.css
+++ b/public/stylesheets/user-jinglelists.css
@@ -13,7 +13,6 @@ body {
 }
 
 .lists-and-jingles-container {
-    margin-top: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -50,20 +49,30 @@ body {
     text-shadow: 0px 0px 0px transparent;
     color: #594c3f;
     display: inline-block;
+    font-size: 10px;
 }
 
 .list-delete:hover {
     color:red;
 }
 
-.lists-container {
-    width: 40%;
+.lists-container th {
+    padding-bottom: 5px;
 }
 
 .lists-container table {
     width: 250px;
     display: flex;
     flex-direction: column;
+}
+
+.add-list-container p {
+    margin: 10px 0px;
+}
+
+.alert {
+    font-size: 13px;
+    color: red;
 }
 
 #new-list-submit {
@@ -74,16 +83,24 @@ body {
     border-radius: 2px;
     border: 1px solid #877855;
     color: #40362d;
-    font-size: 15px;
+    font-size: 12px;
+    font-weight: bold;
 }
 
 #new-list-submit:hover {
     background-color: #d6cfbf;
 }
 
+.explore-container {
+    margin-top: 8px;
+}
+
 #explore-butt {
-    padding: 10px 0 5px 0;
     text-decoration: none;
+}
+
+#explore-butt:hover {
+    text-decoration: underline;
 }
 
 .sidelinks-container {
@@ -103,12 +120,13 @@ body {
 }
 
 .jingles-container th {
-    width: 20em;
+    width: 100em;
     text-align: left;
 }
 
 .jingles-container td {
     padding-top: 15px;
+    padding-right: 10px;
 }
 
 .jingles-container img {
@@ -116,21 +134,8 @@ body {
     margin-top: 5px;
 }
 
-.column-name-container {
-    border-bottom: 1px solid lightgray;
-    color: rgb(61, 61, 61);
-    display: grid;
-    font-size: 12px;
-    font-weight: bold;
-    grid-template-columns: repeat(6, 1fr);
-    height: 35px;
-    margin-top: 40px;
-}
-
-/* each jingle row */
 img {
     height: 125px;
-    margin-right: 10px;
 }
 
 .jingle-container {
@@ -148,6 +153,10 @@ img {
     left:20px;
 }
 
+#jingle-review-link:hover {
+    text-decoration: underline;
+}
+
 #delete-container {
     position: relative;
     left: 40px;
@@ -158,6 +167,10 @@ img {
     box-shadow: 0px 0px 0px transparent;
     border: 0px solid transparent;
     text-shadow: 0px 0px 0px transparent;
+}
+
+#delete-jingle-from-list:hover {
+    color: red;
 }
 
 .stars {
@@ -175,4 +188,8 @@ img {
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
+}
+
+#empty-list-message {
+    text-align: center;
 }
